
(library
  (name rcontext)
  (synopsis "Per-requesst context")
  (libraries hmap
             (select deadline.ml from
                     (mtime -> deadline.real.ml)
                     (-> deadline.empty.ml))
             (select start_time.ml from
                     (mtime -> start_time.real.ml)
                     (-> start_time.empty.ml))
             ))
